# event-sourcing

./: CHANGELOG.md  Cargo.toml  LICENSING.md  README.md  deny.toml
.github/workflows/: CI.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: custom-metadata.md  custom-stores.md  event-versioning.md  optimistic-concurrency.md  snapshots.md
docs/src/concepts/: architecture.md  cqrs-overview.md  event-sourcing-primer.md
docs/src/core-traits/: aggregate.md  commands.md  domain-event.md  projections.md  stores.md
docs/src/derive-macros/: aggregate-derive.md  manual-implementation.md
docs/src/getting-started/: installation.md  quickstart.md
docs/src/reference/: design-decisions.md
docs/src/testing/: test-framework.md
event-sourcing-core/: Cargo.toml
event-sourcing-core/src/: aggregate.rs  codec.rs  event.rs  projection.rs  repository.rs  snapshot.rs  store.rs  test.rs
event-sourcing-core/src/store/: inmemory.rs
event-sourcing-macros/: Cargo.toml
event-sourcing-macros/src/: lib.rs
event-sourcing-postgres/: CODE-REVIEW.md  Cargo.toml
event-sourcing-postgres/src/: lib.rs
examples/: advanced_projection.rs  inventory_report.rs  optimistic_concurrency.rs  quickstart.rs  snapshotting.rs  subscription_billing.rs  versioned_events.rs
sourcery-core/: CHANGELOG.md  Cargo.toml
sourcery-core/src/: aggregate.rs  codec.rs  concurrency.rs  event.rs  lib.rs  projection.rs  repository.rs  snapshot.rs  store.rs  test.rs
sourcery-core/src/store/: inmemory.rs
sourcery-macros/: CHANGELOG.md  Cargo.toml
sourcery-macros/src/: lib.rs
sourcery-postgres/: CHANGELOG.md  CODE-REVIEW.md  Cargo.toml
sourcery-postgres/src/: lib.rs
src/: aggregate.rs  codec.rs  concurrency.rs  lib.rs  projection.rs  repository.rs  snapshot.rs  store.rs  test.rs
tests/: aggregate_tests.rs  coverage_more.rs
