[workspace]
members = [
    ".",
    "event-sourcing-core",
    "event-sourcing-macros",
    "event-sourcing-postgres",
]

[workspace.package]
license = "MIT"
edition = "2024"
version = "0.1.0"
rust-version = "1.88.0"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[package]
name = "event-sourcing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
test-util = ["event-sourcing-core/test-util"]
postgres = ["dep:event-sourcing-postgres"]

[dependencies]
event-sourcing-core = { path = "event-sourcing-core" }
event-sourcing-macros = { path = "event-sourcing-macros" }
event-sourcing-postgres = { path = "event-sourcing-postgres", optional = true }

[dev-dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde-evolve = "0.1.0"
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }

[[example]]
name = "advanced_projection"
required-features = ["test-util"]

[[example]]
name = "optimistic_concurrency"
required-features = ["test-util"]
