[workspace]
members = [
    ".",
    "sourcery-core",
    "sourcery-macros",
    "sourcery-postgres",
]

[workspace.package]
license = "MIT"
edition = "2024"
version = "0.1.0"
rust-version = "1.88.0"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[package]
name = "sourcery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
test-util = ["sourcery-core/test-util"]
postgres = ["dep:sourcery-postgres"]

[dependencies]
sourcery-core = { path = "sourcery-core" }
sourcery-macros = { path = "sourcery-macros" }
sourcery-postgres = { path = "sourcery-postgres", optional = true }

[dev-dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde-evolve = "0.1.0"
thiserror = { version = "2", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }

[[example]]
name = "advanced_projection"
required-features = ["test-util"]

[[example]]
name = "optimistic_concurrency"
required-features = ["test-util"]
