[package]
name = "event-sourcing-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
darling = "0.23"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
