[package]
name = "event-sourcing-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
darling = { version = "0.23", default-features = false }
syn = { version = "2", default-features = false, features = ["full", "parsing", "proc-macro"] }
quote = { version = "1", default-features = false, features = ["proc-macro"] }
proc-macro2 = { version = "1", default-features = false, features = ["proc-macro"] }
