[package]
name = "sourcery-postgres"
description = "A Postgres implementation of the Sourcery 'EventStore'"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
sourcery-core = { path = "../sourcery-core", version = "0.1"}
serde = { version = "1", default-features = false, features = ["derive", "std"] }
sqlx = { version = "0.8.3", default-features = false, features = ["json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = { version = "2", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
uuid = { version = "1", default-features = false, features = ["std"] }
